2006-02-14 [colin]	2.0.0cvs49

	* src/pixmaps/address_book.xpm
	* src/pixmaps/preferences.xpm
	* src/pixmaps/properties.xpm
		Fix pixmap size - patch by Fabien Vantard

2006-02-13 [colin]	2.0.0cvs48

	* src/procmime.c
		Add missing fclose()s on error
	* src/textview.c
		Remove unused code
	* src/common/utils.c
		Fix temp files not being deleted on windows
	Patches by Thomas Gilgin

2006-02-13 [cleroy]	2.0.0cvs47

	* src/mainwindow.c
		Fix exit crash

2006-02-13 [wwp]	2.0.0cvs46

	* src/plugins/pgpcore/prefs_gpg.c
		fixed sensitivity of radio widgets in account / GPG-plugin prefs.

2006-02-12 [colin]	2.0.0cvs45

	* src/folderview.c
	* src/main.c
	* src/mainwindow.c
		Fix "stuff" when quitting

2006-02-12 [wwp]	2.0.0cvs44

	* src/prefs_themes.c
		fix typos in debug messages.

2006-02-11 [colin]	2.0.0cvs43

	* src/summaryview.c
		don't allow drag/drop from ourself

2006-02-10 [wwp]	2.0.0cvs42

	* src/exporthtml.c
	* src/html.c
	* src/html.h
	* src/procmime.c
	* src/textview.c
		renamed html_ prefixed functions and data structures to avoid
		namespace clashes w/ other software (gtkhtml2 for instance).
		Closes bug #907.


2006-02-09 [colin]	2.0.0cvs41

	* src/summaryview.c
		Fix shitty logic messed up. Thanks Ticho for the hint!

2006-02-09 [wwp]	2.0.0cvs40

	* src/gtk/about.c
	* src/compose.c
	* src/prefs_account.c
	* src/prefs_gtk.h
	* src/editaddress.c
		added mnemonics to notebook widgets (compose, account prefs, about and editaddress),
		patch by Fabien Vantard (fzzzzz!). Solved some mnemonic conflicts around the
		Browse buttons in accounts prefs.

2006-02-09 [colin]	2.0.0cvs39

	* src/matcher.c
		Check for pointer before using its members
	* src/gtk/gtksourceprintjob.c
		Fix a wrong warning

2006-02-09 [wwp]	2.0.0cvs38

	* src/gtk/filesel.c
		fix few compiler warnings (type mismatch).

2006-02-09 [paul]	2.0.0cvs37

	* po/fr.po
		updated by Fabien Vantard

2006-02-08 [colin]	2.0.0cvs36

	* src/prefs_common.c
	* src/common/defs.h
	* src/common/plugin.c