@@ -1233,3 +1233,4 @@
 ( cvs diff -u -r 1.274.2.96 -r 1.274.2.97 src/mainwindow.c;  ) > 2.0.0cvs47.patchset
 ( cvs diff -u -r 1.49.2.72 -r 1.49.2.73 src/procmime.c;  cvs diff -u -r 1.96.2.95 -r 1.96.2.96 src/textview.c;  cvs diff -u -r 1.36.2.55 -r 1.36.2.56 src/common/utils.c;  ) > 2.0.0cvs48.patchset
 ( cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/pixmaps/address_book.xpm;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/pixmaps/preferences.xpm;  cvs diff -u -r 1.1.14.1 -r 1.1.14.2 src/pixmaps/properties.xpm;  ) > 2.0.0cvs49.patchset
+( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 manual/advanced.xml;  ) > 2.0.0cvs50.patchset
