@@ -1,3 +1,9 @@
+2006-02-15 [paul]	2.0.0cvs50
+
+	* manual/advanced.xml
+		improve Templates info
+		written by wwp
+
 2006-02-14 [colin]	2.0.0cvs49
 
 	* src/pixmaps/address_book.xpm
